# hackdavis26

./: .gitignore  README.md  design.md  product.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: store.py
backend/app/routing/: graph.py
backend/app/scoring/: gemini.py  geocoding.py  network.py  pipeline.py  streetview.py
demo/: coverage.html  index.html
memory/: MEMORY.md  project_overview.md
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/safepath/: crime-intel.ts  directions-list.tsx  map-canvas.tsx  mapbox-route-steps.ts  mapbox-routes.ts  mapbox-search.tsx  mock-data.ts  route-card.tsx  route-enrichment.ts  route-reasoning-panel.tsx  safepath-enrichment.ts  safepath-routes.ts  safety.tsx  segment-copy.ts  side-panel.tsx  street-view-tour.tsx  stress-cue-copy.ts  types.ts
web/src/lib/: safepath-api.ts
