[project]
name = "safebike-backend"
version = "0.1.0"
description = "Bike safety scoring + routing backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "osmnx>=2.0",
    "networkx>=3.3",
    "shapely>=2.0",
    "geopandas>=1.0",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "tqdm>=4.66",
    "pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
